--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hotkeys": "^1.1.4",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
+    "react-yandex-metrika": "^2.4.2",
     "redux": "^3.7.2",
     "redux-act": "^1.7.3",
     "redux-form": "^7.4.2",
