--- a/front/package.json
+++ b/front/package.json
@@ -5,24 +5,24 @@
   "homepage": "https://geekrodion.com",
   "dependencies": {
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
-    "@fortawesome/fontawesome-svg-core": "^1.2.2",
-    "@fortawesome/free-brands-svg-icons": "^5.1.0-11",
-    "@fortawesome/free-solid-svg-icons": "^5.2.0",
-    "@fortawesome/react-fontawesome": "^0.1.1",
-    "lodash": "^4.17.10",
-    "luxon": "^1.3.3",
-    "react": "^16.4.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/free-brands-svg-icons": "^5.5.0",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@fortawesome/react-fontawesome": "^0.1.3",
+    "lodash": "^4.17.11",
+    "luxon": "^1.6.2",
+    "react": "^16.6.1",
     "react-document-title": "^2.0.3",
-    "react-dom": "^16.4.1",
+    "react-dom": "^16.6.1",
     "react-hotkeys": "^1.1.4",
-    "react-redux": "^5.0.7",
-    "react-scripts": "1.1.4",
+    "react-redux": "^5.1.1",
+    "react-scripts": "^2.1.1",
     "react-yandex-metrika": "^2.4.2",
     "redux": "^3.7.2",
     "redux-act": "^1.7.3",
     "redux-form": "^7.4.2",
-    "redux-saga": "^0.16.0",
-    "styled-components": "^3.4.2"
+    "redux-saga": "^0.16.2",
+    "styled-components": "^3.4.10"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -43,7 +43,13 @@
   },
   "devDependencies": {
     "husky": "^0.14.3",
-    "lint-staged": "^7.1.2",
-    "prettier": "^1.11.1"
-  }
+    "lint-staged": "^7.3.0",
+    "prettier": "^1.15.2"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
