--- a/front/package.json
+++ b/front/package.json
@@ -14,10 +14,10 @@
     "react": "^16.6.1",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.6.1",
+    "react-ga": "^2.5.6",
     "react-hotkeys": "^1.1.4",
     "react-redux": "^5.1.1",
     "react-scripts": "^2.1.1",
-    "react-yandex-metrika": "^2.4.2",
     "redux": "^3.7.2",
     "redux-act": "^1.7.3",
     "redux-form": "^7.4.2",
