--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.5.0",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "@sentry/browser": "^4.4.2",
     "lodash": "^4.17.11",
     "luxon": "^1.6.2",
     "react": "^16.6.1",
