--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@sentry/browser": "^4.4.2",
+    "increaser-components": "^0.1.1",
     "lodash": "^4.17.11",
     "luxon": "^1.6.2",
     "react": "^16.6.1",
@@ -23,7 +24,7 @@
     "redux-act": "^1.7.3",
     "redux-form": "^7.4.2",
     "redux-saga": "^0.16.2",
-    "styled-components": "^3.4.10"
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "predeploy": "npm run build",
