--- a/front/public/manifest.json
+++ b/front/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "geekrodion",
-  "name": "geekrodion diagram and google places",
+  "name": "GeekRodion",
   "icons": [
     {
       "src": "favicon.ico",
