--- a/front/package.json
+++ b/front/package.json
@@ -1,57 +1,47 @@
 {
-  "name": "geekrodion.com",
+  "name": "gatsby-starter-default",
+  "private": true,
+  "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
-  "private": false,
-  "homepage": "https://geekrodion.com",
+  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@fortawesome/fontawesome-free-solid": "^5.0.13",
-    "@fortawesome/fontawesome-svg-core": "^1.2.8",
-    "@fortawesome/free-brands-svg-icons": "^5.5.0",
-    "@fortawesome/free-solid-svg-icons": "^5.5.0",
-    "@fortawesome/react-fontawesome": "^0.1.3",
-    "@sentry/browser": "^4.4.2",
-    "increaser-components": "^0.1.1",
-    "lodash": "^4.17.11",
-    "luxon": "^1.6.2",
-    "react": "^16.6.1",
-    "react-document-title": "^2.0.3",
-    "react-dom": "^16.6.1",
-    "react-ga": "^2.5.6",
-    "react-hotkeys": "^1.1.4",
-    "react-redux": "^5.1.1",
-    "react-scripts": "^2.1.1",
-    "redux": "^3.7.2",
-    "redux-act": "^1.7.3",
-    "redux-form": "^7.4.2",
-    "redux-saga": "^0.16.2",
-    "styled-components": "^4.1.3"
-  },
-  "scripts": {
-    "predeploy": "npm run build",
-    "mockrun": "REACT_APP_MOCK=true react-scripts start",
-    "precommit": "lint-staged",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
-  },
-  "lint-staged": {
-    "*.{js,json}": [
-      "prettier --single-quote --write",
-      "git add"
-    ]
-  },
-  "prettier": {
-    "semi": false
+    "babel-plugin-styled-components": "^1.10.7",
+    "gatsby": "^2.23.12",
+    "gatsby-image": "^2.4.9",
+    "gatsby-plugin-manifest": "^2.4.14",
+    "gatsby-plugin-offline": "^3.2.13",
+    "gatsby-plugin-react-helmet": "^3.3.6",
+    "gatsby-plugin-sharp": "^2.6.14",
+    "gatsby-plugin-styled-components": "^3.3.10",
+    "gatsby-source-filesystem": "^2.3.14",
+    "gatsby-transformer-sharp": "^2.5.7",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "husky": "^0.14.3",
-    "lint-staged": "^7.3.0",
-    "prettier": "^1.15.2"
+    "prettier": "2.0.5"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "keywords": [
+    "gatsby"
+  ],
+  "license": "0BSD",
+  "scripts": {
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "start": "npm run develop",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+  },
+  "bugs": {
+    "url": "https://github.com/gatsbyjs/gatsby/issues"
+  }
 }
