--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.7",
+    "beautiful-react-hooks": "^0.27.1",
     "gatsby": "^2.23.12",
     "gatsby-image": "^2.4.13",
     "gatsby-plugin-manifest": "^2.4.14",
@@ -15,6 +16,7 @@
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-source-filesystem": "^2.3.14",
     "gatsby-transformer-sharp": "^2.5.11",
+    "lodash": "^4.17.19",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
