feature: amplitude analytics

--- a/CI/Dockerfile
+++ b/CI/Dockerfile
@@ -4,4 +4,5 @@ RUN apt-get update \
   && apt-get install -y python-dev \
   && curl -O https://bootstrap.pypa.io/get-pip.py \
   && python get-pip.py \
-  && pip install awscli
+  && pip install awscli \
+  && npm install -g gatsby-cli
