--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "gatsby-source-filesystem": "^2.3.14",
     "gatsby-transformer-sharp": "^2.5.11",
     "lodash": "^4.17.19",
+    "luxon": "^1.24.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
