--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "gatsby": "^2.23.12",
     "gatsby-image": "^2.4.13",
     "gatsby-plugin-amplitude-analytics": "^3.0.0",
+    "gatsby-plugin-catch-links": "^2.3.13",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.4.14",
     "gatsby-plugin-offline": "^3.2.13",
@@ -21,6 +22,7 @@
     "gatsby-plugin-sharp": "^2.6.19",
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-source-filesystem": "^2.3.14",
+    "gatsby-transformer-remark": "^2.8.36",
     "gatsby-transformer-sharp": "^2.5.11",
     "lodash": "^4.17.19",
     "luxon": "^1.24.1",
