--- a/front/package.json
+++ b/front/package.json
@@ -12,18 +12,19 @@
     "babel-plugin-styled-components": "^1.10.7",
     "beautiful-react-hooks": "^0.27.1",
     "gatsby": "^2.23.12",
-    "gatsby-image": "^2.4.13",
+    "gatsby-image": "^2.4.20",
     "gatsby-plugin-amplitude-analytics": "^3.0.0",
     "gatsby-plugin-catch-links": "^2.3.13",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.4.14",
     "gatsby-plugin-offline": "^3.2.13",
     "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-sharp": "^2.6.19",
+    "gatsby-plugin-sharp": "^2.6.38",
     "gatsby-plugin-styled-components": "^3.3.10",
+    "gatsby-remark-images": "^3.3.32",
     "gatsby-source-filesystem": "^2.3.14",
     "gatsby-transformer-remark": "^2.8.36",
-    "gatsby-transformer-sharp": "^2.5.11",
+    "gatsby-transformer-sharp": "^2.5.16",
     "lodash": "^4.17.19",
     "luxon": "^1.24.1",
     "prop-types": "^15.7.2",
