--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "gatsby": "^2.23.12",
     "gatsby-image": "^2.4.20",
     "gatsby-plugin-amplitude-analytics": "^3.0.0",
+    "gatsby-plugin-canonical-urls": "^2.3.13",
     "gatsby-plugin-catch-links": "^2.3.13",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.4.14",
