--- a/front/package.json
+++ b/front/package.json
@@ -25,6 +25,7 @@
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "^3.3.32",
     "gatsby-source-filesystem": "^2.3.14",
+    "gatsby-transformer-json": "^2.4.14",
     "gatsby-transformer-remark": "^2.8.36",
     "gatsby-transformer-sharp": "^2.5.16",
     "lodash": "^4.17.19",
