--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sharp": "^2.6.38",
     "gatsby-plugin-styled-components": "^3.3.10",
+    "gatsby-remark-embed-gist": "^1.2.1",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "^3.3.32",
     "gatsby-source-filesystem": "^2.3.14",
