--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-offline": "^3.2.13",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-sharp": "^2.6.38",
+    "gatsby-plugin-sitemap": "^2.4.15",
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-remark-embed-gist": "^1.2.1",
     "gatsby-remark-external-links": "0.0.4",
