--- a/front/package.json
+++ b/front/package.json
@@ -17,9 +17,11 @@
     "gatsby-plugin-canonical-urls": "^2.3.13",
     "gatsby-plugin-catch-links": "^2.3.13",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-google-fonts-with-attributes": "^1.0.7",
     "gatsby-plugin-manifest": "^2.4.14",
     "gatsby-plugin-offline": "^3.2.13",
     "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-plugin-s3": "^0.3.5",
     "gatsby-plugin-sharp": "^2.6.38",
     "gatsby-plugin-sitemap": "^2.4.15",
     "gatsby-plugin-styled-components": "^3.3.10",
@@ -52,7 +54,8 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "deploy": "gatsby-plugin-s3 deploy --yes"
   },
   "repository": {
     "type": "git",
