--- a/front/package.json
+++ b/front/package.json
@@ -28,12 +28,14 @@
     "gatsby-remark-embed-gist": "^1.2.1",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "^3.3.32",
+    "gatsby-remark-prismjs": "^3.5.16",
     "gatsby-source-filesystem": "^2.3.14",
     "gatsby-transformer-json": "^2.4.14",
     "gatsby-transformer-remark": "^2.8.36",
     "gatsby-transformer-sharp": "^2.5.16",
     "lodash": "^4.17.19",
     "luxon": "^1.24.1",
+    "prismjs": "^1.21.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
