--- a/front/package.json
+++ b/front/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-sharp": "^2.6.38",
     "gatsby-plugin-sitemap": "^2.4.15",
     "gatsby-plugin-styled-components": "^3.3.10",
+    "gatsby-remark-copy-linked-files": "^2.3.19",
     "gatsby-remark-embed-gist": "^1.2.1",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "^3.3.32",
