--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-manifest": "^2.4.14",
     "gatsby-plugin-offline": "^3.2.13",
     "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-plugin-remove-trailing-slashes": "^2.3.13",
     "gatsby-plugin-s3": "^0.3.5",
     "gatsby-plugin-sharp": "^2.6.38",
     "gatsby-plugin-sitemap": "^2.4.15",
