--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-offline": "^3.2.13",
     "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-remove-trailing-slashes": "^2.3.13",
+    "gatsby-plugin-root-import": "^2.0.6",
     "gatsby-plugin-s3": "^0.3.5",
     "gatsby-plugin-sharp": "^2.6.38",
     "gatsby-plugin-sitemap": "^2.4.15",
