--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -21,8 +21,11 @@
     "noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
 
     /* Module Resolution Options */
-    "allowSyntheticDefaultImports": true /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
-
+    "allowSyntheticDefaultImports": true, /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
+    "baseUrl": ".",
+    "paths": {
+      "src/*": ["src/*"],
+    }
   },
   "include": ["./src/**/*"]
 }
