--- a/front/package.json
+++ b/front/package.json
@@ -44,6 +44,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-spring": "^9.0.0",
     "react-to-print": "^2.12.1",
     "styled-components": "^5.1.1"
   },
